--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
 								<li><a href="https://github.com/brittanydianah/RandomColor" class="button">Repo</a></li>
 							</ul>
 						</div>
-
 						<div class="col-3 col-12-medium">
 							<span class="image fit"><img src="images/pricepanel.png" alt="" /></span>
 							<h3>Pricing Panel</h3>
@@ -101,6 +100,15 @@
 							<ul class="actions special">
 								<li><a href="https://brittanydianah.github.io/PricingPanel/" class="button">Web</a></li>
 								<li><a href="https://github.com/brittanydianah/PricingPanel" class="button">Repo</a></li>
+							</ul>
+						</div>
+						<div class="col-3 col-12-medium">
+							<span class="image fit"><img src="" alt="" /></span>
+							<h3>ScoreKeeper</h3>
+							<p> Keeps score for a ping pong match</p>
+							<ul class="actions special">
+								<li><a href="https://brittanydianah.github.io/PingPongScore/" class="button">Web</a></li>
+								<li><a href="https://github.com/brittanydianah/PingPongScore" class="button">Repo</a></li>
 							</ul>
 						</div>
 					</div>
