add scorekeeper pic

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</header>
 					<div class="row gtr-150">
 						<div class="col-3 col-12-medium">
-							<span class="image fit"><img src="images/PacMan6.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/PacMan1.png" alt="" /></span>
 							<h3>Pac-Man</h3>
 							<p>Create pac-men and move them across the page</p>
 							<ul class="actions special">
@@ -105,6 +105,7 @@
 							</ul>
 						</div>
 						<div class="col-3 col-12-medium">
+							<span class="image fit"><img src="images/pingpong.jpg" alt="" /></span>
 							<span class="image fit"><img src="" alt="" /></span>
 							<h3>ScoreKeeper</h3>
 							<p> Keeps score for a ping pong match</p>
