--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
 						<p>Applications built with HTML, CSS, and JavaScript</p>
 					</header>
 					<div class="row gtr-150">
+						<div class="col-3 col-12-medium"> 
+							<span class="image fit"><img src="images/pingpong.jpg" alt="" /></span>
+
+							<h3>ScoreKeeper</h3>
+							<p> Keeps score for a ping pong match</p>
+							<ul class="actions special">
+								<li><a href="https://brittanydianah.github.io/PingPongScore/" class="button">Web</a></li>
+								<li><a href="https://github.com/brittanydianah/PingPongScore" class="button">Repo</a></li>
+							</ul>
+						</div>
 						<div class="col-3 col-12-medium">
 							<span class="image fit"><img src="images/PacMan1.png" alt="" /></span>
 							<h3>Pac-Man</h3>
@@ -104,16 +114,7 @@
 								<li><a href="https://github.com/brittanydianah/PricingPanel" class="button">Repo</a></li>
 							</ul>
 						</div>
-						<div class="col-3 col-12-medium">
-							<span class="image fit"><img src="images/pingpong.jpg" alt="" /></span>
 
-							<h3>ScoreKeeper</h3>
-							<p> Keeps score for a ping pong match</p>
-							<ul class="actions special">
-								<li><a href="https://brittanydianah.github.io/PingPongScore/" class="button">Web</a></li>
-								<li><a href="https://github.com/brittanydianah/PingPongScore" class="button">Repo</a></li>
-							</ul>
-						</div>
 					</div>
 				</div>
 			</section>
@@ -123,9 +124,17 @@
 				<div class="container">
 					<header class="major">
 						<h2>Communications Work</h2>
-						<p>A sample of written content and video productions</p>
+						<p>A sample of my content around the web</p>
 					</header>
 					<div class="row gtr-150">
+						<div class="col-3 col-12-medium">
+							<span class="image fit"><img src="images/webdesign.png" alt="" /></span>
+							<!-- <h3>Article</h3> -->
+							<p>Website developed alongside a software engineer and a graphic designer </p>
+							<ul class="actions special">
+								<li><a href="https://advancement.uncg.edu/unc-greensboro-foundation/" class="button">Link</a></li>
+							</ul>
+						</div>
 						<div class="col-3 col-12-medium">
 							<span class="image fit"><img src="images/justice.jpg" alt="" /></span>
 							<!-- <h3>Article</h3>  -->
@@ -151,13 +160,30 @@
 							</ul>
 						</div>
 						<div class="col-3 col-12-medium">
-							<span class="image fit"><img src="images/basketball.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/track.png" alt="" /></span>
 							<!-- <h3>Article</h3> -->
+							<p>News release on Chris Belcher running world's fastest time as an undergrad</p>
+							<ul class="actions special">
+								<li><a href="https://ncataggies.com/news/2017/4/15/211561427.aspx" class="button">Link</a></li>
+							</ul>
+						</div>
+						<div class="col-3 col-12-medium">
+							<span class="image fit"><img src="images/thankful.png" alt="" /></span>
+							<!-- <h3>Article</h3> -->
+							<p> Video, "Why I'm Thankful For My Scholarship," thanking campaign donors</p>
+							<ul class="actions special">
+								<li><a href="https://lighttheway.uncg.edu/ " class="button">Link</a></li>
+							</ul>
+						</div>					
+						<!-- <div class="col-3 col-12-medium">
+							<span class="image fit"><img src="images/basketball.jpg" alt="" /></span>
+							<h3>Article</h3>
 							<p>News release on a major donation supporting UNCG basketball</p>
 							<ul class="actions special">
 								<li><a href="https://www.linkedin.com/posts/uncg_putting-hope-in-the-hoop-uncg-light-the-activity-6887368623762006017-Ybmm/" class="button">Link</a></li>
 							</ul>
-						</div>
+						</div> -->
+						
 					</div>
 				</div>
 			</section>
