--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						<div class="col-3 col-12-medium">
 							<span class="image fit"><img src="images/webdesign.png" alt="" /></span>
 							<!-- <h3>Article</h3> -->
-							<p>Website developed alongside a software engineer and a graphic designer </p>
+							<p>Foundation website, created alongside a web developer and graphic designer </p>
 							<ul class="actions special">
 								<li><a href="https://advancement.uncg.edu/unc-greensboro-foundation/" class="button">Link</a></li>
 							</ul>
@@ -138,7 +138,7 @@
 						<div class="col-3 col-12-medium">
 							<span class="image fit"><img src="images/justice.jpg" alt="" /></span>
 							<!-- <h3>Article</h3>  -->
-							<p>News release on a social justice project at Weatherspoon Art Museum</p>
+							<p>News release on a social justice project at the Weatherspoon Art Museum</p>
 							<ul class="actions special">
 								<li><a href="https://www.yesweekly.com/education/weatherspoon-partners-in-social-justice-project/article_fe8e0a6a-17bc-11ec-8d52-1b7fc8b16572.html" class="button">Link</a></li>
 							</ul>
@@ -146,7 +146,7 @@
 						<div class="col-3 col-12-medium">
 							<span class="image fit"><img src="images/nyc.jpg" alt="" /></span>
 							<!-- <h3>Article</h3> -->
-							<p> Feature on Saturday Night Live's new cast member Lauren Holt</p>
+							<p> Magazine feature on Saturday Night Live's new cast member Lauren Holt</p>
 							<ul class="actions special">
 								<li><a href='https://uc.uncg.edu/magazine/newsfront/the-g-to-snl-lauren-holt/' class="button">Link</a></li>
 							</ul>
@@ -162,7 +162,7 @@
 						<div class="col-3 col-12-medium">
 							<span class="image fit"><img src="images/track.png" alt="" /></span>
 							<!-- <h3>Article</h3> -->
-							<p>News release on Chris Belcher running world's fastest time as an undergrad</p>
+							<p>News release on Chris Belcher clocking the nation's fastest 100-meter time</p>
 							<ul class="actions special">
 								<li><a href="https://ncataggies.com/news/2017/4/15/211561427.aspx" class="button">Link</a></li>
 							</ul>
@@ -170,7 +170,7 @@
 						<div class="col-3 col-12-medium">
 							<span class="image fit"><img src="images/thankful.png" alt="" /></span>
 							<!-- <h3>Article</h3> -->
-							<p> Video, "Why I'm Thankful For My Scholarship," thanking campaign donors</p>
+							<p> Video, "Why I'm Thankful For My Scholarship," developed for university campaign</p>
 							<ul class="actions special">
 								<li><a href="https://lighttheway.uncg.edu/ " class="button">Link</a></li>
 							</ul>
