changed intro spacing

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				<div class="inner">
 					<!-- <span class="icon solid major fa-cloud"></span> -->
 					<img src="images/headshot2.jpg" alt="">
-					<h1>Hi! I'm <strong>Brittany Cameron</strong> – software developer and <br />
-						 communications specialist<br />
+					<h1>Hi! I'm <strong>Brittany Cameron</strong> – software developer <br />
+						 and communications specialist<br />
 					</h1>
 					<div>
 						<a href="images/BrittanyCameron_resume.pdf" download="">
